alignment issue

--- a/frontend/src/app/shared/component/shared-job-profile-multiple-matches/shared-job-profile-multiple-matches.component.css
+++ b/frontend/src/app/shared/component/shared-job-profile-multiple-matches/shared-job-profile-multiple-matches.component.css
@@ -81,7 +81,7 @@
 	display: -webkit-inline-box !important;
 }
 .matchs-infos {
-    margin-top: -3rem !important;
+    
 	position: absolute;
     right: 25px;
     vertical-align: middle;
